--- a/landing_page.html
+++ b/landing_page.html
@@ -23,7 +23,7 @@
                   <div class="navbar-nav">
                     <img src="logo.png" class="img-fluid" alt="logo" style=" height: 30px;">
                     <a class="nav-link active" aria-current="page" href="" style="margin-left: 40px;">ACCUEIL</a>
-                    <a class="nav-link" href="" style="margin-left: 30px;">FRANÇAIS</a>
+                    <a class="nav-link" href="french.html" style="margin-left: 30px;">FRANÇAIS</a>
                    <!-- <a class="nav-link" href="atelier.html" style="margin-left: 30px;">ATELIER</a>
                     <a class="nav-link" href="contact.html" style="margin-left: 30px;">CONTACT</a>-->
                   </div>
