lien landing page

--- a/french.html
+++ b/french.html
@@ -22,7 +22,7 @@
                 <div class="collapse navbar-collapse bg-transparent" id="navbarNavAltMarkup">
                   <div class="navbar-nav">
                     <img src="logo.png" class="img-fluid" alt="logo" style=" height: 30px;">
-                    <a class="nav-link active" aria-current="page" href="" style="margin-left: 40px; color: #ffffff;">ACCUEIL</a>
+                    <a class="nav-link active" aria-current="page" href="landing_page.html" style="margin-left: 40px; color: #ffffff;">ACCUEIL</a>
                     <a class="nav-link" href="french.html" style="margin-left: 30px; color: #ffffff">FRANÇAIS</a>
                    <!-- <a class="nav-link" href="atelier.html" style="margin-left: 30px;">ATELIER</a>
                     <a class="nav-link" href="contact.html" style="margin-left: 30px;">CONTACT</a>-->
