--- a/english.html
+++ b/english.html
@@ -33,7 +33,7 @@
             </nav>
           </Header>
 
-          <h1>Christmas Git Project 2023</h1>
+          <h1>Merry Christmas !</h1>
        
     </body>
 </html>
