--- a/espanol.html
+++ b/espanol.html
@@ -26,6 +26,7 @@
                     <a class="nav-link" href="french.html" style="margin-left: 30px; color: #ffffff">FRANÇAIS</a>
                     <a class="nav-link" href="english.html" style="margin-left: 30px; color: #ffffff">ENGLISH</a>
                     <a class="nav-link" href="espanol.html" style="margin-left: 30px; color: #ffffff">ESPANOL</a>
+                    <a class="nav-link" href="italien.html" style="margin-left: 30px; color: #ffffff">ITALIANO</a>
                    <!-- <a class="nav-link" href="atelier.html" style="margin-left: 30px;">ATELIER</a>
                     <a class="nav-link" href="contact.html" style="margin-left: 30px;">CONTACT</a>-->
                   </div>
